# harp

./: .gitignore  DATA_MANIFEST.md  README.md  REPLICATION_PLAN.md  UK_EU_PRE_REGISTRATION.md  pyproject.toml
data/audit/: experiment_b1_eu_only_firm_selection.csv  experiment_b1_firm_selection.csv  simfin_eu_coverage.csv  uk_eu_coverage_matrix.csv  uk_eu_feasibility_report.md
data/intensities/: experiment_a1_intensities.parquet  experiment_b1_eu_only_firms_only_intensities.parquet  experiment_b1_eu_only_intensities.parquet  experiment_b1_intensities.parquet  experiment_b1_us_eu_combined_firms_only_intensities.parquet  experiment_b1_us_eu_combined_intensities.parquet
data/processed/: edgar_balance_sheet.parquet
data/registries/: experiment_a1_registry.json  experiment_b1_eu_only_firms_only_registry.json  experiment_b1_eu_only_registry.json  experiment_b1_registry.json  experiment_b1_us_eu_combined_firms_only_registry.json  experiment_b1_us_eu_combined_registry.json
paper/: harp.tex
scripts/: dm_hac_inference.py  dm_hac_uk_eu.py  filing_lag.py  fred_recursive.py  gating_policies.py  gbm_and_supplementary.py  gbm_sector_and_ic.py  generate_figures.py  geodesic_diagnostics.py  held_out_and_stratified.py  local_dmd_vs_pca.py  lowo_block_selection.py  lowo_block_uk_eu.py  regime_subwindows_uk_eu.py  robustness_checks.py  standalone_diagnostic.py  table2_augmentation.py  table3_method_comparison.py  table5_architectures.py  table5_uk_eu.py  table7_placebo.py  table7_placebo_uk_eu.py  table8_cross_panel.py  table9_parsimony.py  target_sensitivity.py
(+82 files in other folders)
